# DL

./: .gitmodules  LICENSE  README.md  losses.py  tinygrad_test.py
DroneDetector/: .gitignore  README.md
DroneDetector/dataset/: dataloader.py
DroneDetector/deploy/object_detection/: CMakeLists.txt  inference_exported_model.py  maskrcnn_export.py  ts_maskrcnn.cpp
DroneDetector/object_detect_track/: detect_track.py
DroneDetector/object_detection/MViTv2/: config.py  drone_loader.py  inference.py  train.py
DroneDetector/object_detection/YOLO/: drone_detect.yaml  train.py
DroneDetector/object_detection/maskRCNN/: inference.py  train.py
MDNet/: dataloader.py  model.py
sam_sulek_detector/: sam_sulek_dataset.py
tracking/: README.md  dataloader.py  dummy_video.py  model.py  tracker.py
utils/: dummy_video.py  iou.py
